fix: Update link color in twotone_blue.scss to improve visibility

--- a/docs/_sass/color_schemes/twotone_blue.scss
+++ b/docs/_sass/color_schemes/twotone_blue.scss
@@ -2,7 +2,7 @@ $color-scheme: twotone_blue;
 $body-background-color: #2d5986;
 $body-heading-color: $grey-lt-000;
 $body-text-color: $grey-lt-200;
-$link-color: $grey-dk-000;
+$link-color: $grey-lt-000;
 $nav-child-link-color: $grey-dk-000;
 $sidebar-color: $grey-dk-300;
 $base-button-color: $grey-dk-250;
